Fix alignments

--- a/src/assets/css/index.module.css
+++ b/src/assets/css/index.module.css
@@ -1,23 +1,26 @@
 .hero {
-  margin: 0 auto;
   color: white;
+  margin: 0 auto;
 }
 
 .hero h2 {
-  max-width: 450px;
   color: white;
   margin: 50px auto;
+  max-width: 450px;
 }
 
 .hero p {
-  max-width: 600px;
   margin: 0 auto;
+  max-width: 600px;
 }
 
 .container {
-  height: 850px;
-  width: 100vw;
+  align-items: center;
   background-color: #293579;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  height: 850px;
+  justify-content: center;
+  text-align: center;
+  width: 100vw;
 }
